--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ VITE_USE_MOCK = true
 VITE_PUBLIC_PATH = /
 
 # 网站前缀
-VITE_BASE_URL = /naive-ui-admin-preview
+VITE_BASE_URL = /
 
 # 是否删除console
 VITE_DROP_CONSOLE = true
