--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@tailwindcss/postcss7-compat": "^2.2.4",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
@@ -56,7 +55,7 @@
     "@vitejs/plugin-vue-jsx": "^1.1.5",
     "@vue/compiler-sfc": "3.1.1",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.3.1",
     "commitizen": "^4.2.4",
     "core-js": "^3.14.0",
     "dotenv": "^10.0.0",
@@ -80,11 +79,11 @@
     "stylelint-scss": "^3.19.0",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.2",
-    "vite": "2.4.0-beta.3",
+    "vite": "^2.4.2",
     "vite-plugin-html": "^2.0.7",
-    "vite-plugin-mock": "^2.8.0",
-    "vite-plugin-style-import": "^0.10.1",
-    "vue-eslint-parser": "^7.6.0"
+    "vite-plugin-mock": "^2.9.1",
+    "vite-plugin-style-import": "^1.0.1",
+    "vue-eslint-parser": "^7.8.0"
   },
   "lint-staged": {
     "*.{vue,js,ts,tsx}": "eslint --fix"
