--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-ui-admin",
-  "version": "1.3",
+  "version": "1.4",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
@@ -80,9 +80,9 @@
     "stylelint-scss": "^3.19.0",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.2",
-    "vite": "^2.4.2",
+    "vite": "2.3.6",
     "vite-plugin-html": "^2.0.7",
-    "vite-plugin-mock": "^2.9.1",
+    "vite-plugin-mock": "^2.9.3",
     "vite-plugin-style-import": "^1.0.1",
     "vue-eslint-parser": "^7.8.0"
   },
