fix Bug or add docs

--- a/.env.development
+++ b/.env.development
@@ -13,14 +13,18 @@ VITE_BASE_URL = /
 # 是否删除console
 VITE_DROP_CONSOLE = true
 
+# 跨域代理，可以配置多个，请注意不要换行
+#VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
+# VITE_PROXY=[["/api","https://naive-ui-admin"]]
+
 # API 接口地址
-VITE_APP_API_URL = /
+VITE_GLOB_API_URL =
 
 # 图片上传地址
-VITE_GLOB_UPLOAD_URL= /
+VITE_GLOB_UPLOAD_URL=
 
 # 图片前缀地址
-VITE_GLOB_IMG_URL= /
+VITE_GLOB_IMG_URL=
 
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX = /api
