--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-ui-admin",
-  "version": "1.4",
+  "version": "1.5",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
@@ -8,8 +8,12 @@
   },
   "private": true,
   "scripts": {
+    "bootstrap": "yarn install",
+    "serve": "npm run dev",
     "dev": "vite",
     "build": "vite build && esno ./build/script/postBuild.ts",
+    "build:no-cache": "yarn clean:cache && npm run build",
+    "report": "cross-env REPORT=true npm run build",
     "preview": "vite preview",
     "build typecheck": "vuedx-typecheck . && vite build",
     "deploy": "gh-pages -d dist",
@@ -34,8 +38,7 @@
     "makeit-captcha": "^1.2.5",
     "mitt": "^2.1.0",
     "mockjs": "^1.1.0",
-    "naive-ui": "^2.15.5",
-    "nprogress": "^1.0.0-1",
+    "naive-ui": "^2.15.11",
     "pinia": "^2.0.0-beta.3",
     "qs": "^6.10.1",
     "vfonts": "^0.1.0",
@@ -76,14 +79,16 @@
     "postcss": "^8.3.5",
     "prettier": "^2.3.1",
     "pretty-quick": "^3.1.0",
+    "rimraf": "^3.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "tailwindcss": "^2.2.4",
-    "typescript": "^4.3.2",
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.3.5",
     "vite": "2.3.6",
+    "vite-plugin-compression": "^0.3.1",
     "vite-plugin-html": "^2.0.7",
     "vite-plugin-mock": "^2.9.3",
     "vite-plugin-style-import": "^1.0.1",
