--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-ui-admin",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
@@ -30,7 +30,7 @@
     "@vueuse/core": "^5.0.3",
     "axios": "^0.21.1",
     "blueimp-md5": "^2.18.0",
-    "dayjs": "^1.10.5",
+    "date-fns": "^2.23.0",
     "echarts": "^5.1.2",
     "element-resize-detector": "^1.2.3",
     "lodash": "^4.17.21",
@@ -38,7 +38,7 @@
     "makeit-captcha": "^1.2.5",
     "mitt": "^2.1.0",
     "mockjs": "^1.1.0",
-    "naive-ui": "^2.15.11",
+    "naive-ui": "^2.16.0",
     "pinia": "^2.0.0-beta.3",
     "qs": "^6.10.1",
     "vfonts": "^0.1.0",
