支持 Vue 3.2.x 语法升级为，script setup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-ui-admin",
-  "version": "1.5.4",
+  "version": "1.5.5",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@vicons/antd": "^0.10.0",
     "@vicons/ionicons5": "^0.10.0",
+    "@vueup/vue-quill": "^1.0.0-beta.7",
     "@vueuse/core": "^5.0.3",
     "axios": "^0.21.1",
     "blueimp-md5": "^2.18.0",
@@ -39,11 +40,11 @@
     "mitt": "^2.1.0",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.16.2",
-    "pinia": "^2.0.0-beta.3",
+    "pinia": "^2.0.0-rc.4",
     "qs": "^6.10.1",
     "vfonts": "^0.1.0",
-    "vue": "^3.1.2",
-    "vue-router": "^4.0.10",
+    "vue": "^3.2.2",
+    "vue-router": "^4.0.11",
     "vue-types": "^4.0.0",
     "vuedraggable": "^4.0.3",
     "vuex": "^4.0.2"
@@ -53,17 +54,17 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vitejs/plugin-vue-jsx": "^1.1.5",
-    "@vue/compiler-sfc": "3.1.1",
+    "@vue/compiler-sfc": "^3.2.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^10.3.1",
     "commitizen": "^4.2.4",
     "core-js": "^3.14.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-define-config": "^1.0.9",
     "eslint-plugin-jest": "^24.4.0",
