optimize ts type

--- a/package.json
+++ b/package.json
@@ -39,26 +39,25 @@
     "makeit-captcha": "^1.2.5",
     "mitt": "^2.1.0",
     "mockjs": "^1.1.0",
-    "naive-ui": "^2.16.2",
+    "naive-ui": "^2.19.1",
     "pinia": "^2.0.0-rc.4",
     "qs": "^6.10.1",
     "vfonts": "^0.1.0",
-    "vue": "^3.2.2",
+    "vue": "^3.2.16",
     "vue-router": "^4.0.11",
-    "vue-types": "^4.0.0",
-    "vuedraggable": "^4.0.3",
-    "vuex": "^4.0.2"
+    "vue-types": "^4.1.0",
+    "vuedraggable": "^4.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vitejs/plugin-vue-jsx": "^1.1.5",
-    "@vue/compiler-sfc": "^3.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "@vitejs/plugin-vue": "^1.9.1",
+    "@vitejs/plugin-vue-jsx": "^1.1.8",
+    "@vue/compiler-sfc": "^3.2.16",
     "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^10.3.1",
     "commitizen": "^4.2.4",
@@ -69,7 +68,7 @@
     "eslint-define-config": "^1.0.9",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.11.1",
+    "eslint-plugin-vue": "^7.18.0",
     "esno": "^0.7.3",
     "gh-pages": "^3.2.0",
     "husky": "^6.0.0",
@@ -87,13 +86,13 @@
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
     "tailwindcss": "^2.2.7",
-    "typescript": "^4.3.5",
-    "vite": "2.4.4",
+    "typescript": "^4.4.3",
+    "vite": "^2.5.10",
     "vite-plugin-compression": "^0.3.1",
     "vite-plugin-html": "^2.0.7",
     "vite-plugin-mock": "^2.9.3",
     "vite-plugin-style-import": "^1.0.1",
-    "vue-eslint-parser": "^7.8.0"
+    "vue-eslint-parser": "^7.11.0"
   },
   "lint-staged": {
     "*.{vue,js,ts,tsx}": "eslint --fix"
