按需引入NaiveUi并自动创建.d.ts声明，在volar中使用组件可获得代码提示和类型检查

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
       ]
     }
   },
-  "include": [
+  "includes": [
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
@@ -48,6 +48,7 @@
     "build/**/*.ts",
     "build/**/*.d.ts",
     "mock/**/*.ts",
+    "components.d.ts",
     "vite.config.ts"
   ],
   "exclude": [
