--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "stylelint-scss": "^3.19.0",
     "tailwindcss": "^2.2.7",
     "typescript": "^4.4.3",
+    "unplugin-vue-components": "^0.17.2",
     "vite": "^2.5.10",
     "vite-plugin-compression": "^0.3.1",
     "vite-plugin-html": "^2.0.7",
