--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-define-config": "^1.0.9",
+    "eslint-define-config": "1.1.2",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.18.0",
