--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-ui-admin",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
@@ -28,71 +28,70 @@
     "@vicons/antd": "^0.10.0",
     "@vicons/ionicons5": "^0.10.0",
     "@vueup/vue-quill": "^1.0.0-beta.7",
-    "@vueuse/core": "^5.0.3",
-    "axios": "^0.21.1",
-    "blueimp-md5": "^2.18.0",
-    "date-fns": "^2.23.0",
-    "echarts": "^5.1.2",
-    "element-resize-detector": "^1.2.3",
+    "@vueuse/core": "^5.3.0",
+    "axios": "^0.21.4",
+    "blueimp-md5": "^2.19.0",
+    "date-fns": "^2.28.0",
+    "echarts": "^5.3.0",
+    "element-resize-detector": "^1.2.4",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "makeit-captcha": "^1.2.5",
     "mitt": "^2.1.0",
     "mockjs": "^1.1.0",
-    "naive-ui": "^2.23.2",
-    "pinia": "^2.0.0-rc.4",
-    "qs": "^6.10.1",
+    "naive-ui": "^2.25.2",
+    "pinia": "^2.0.11",
+    "qs": "^6.10.3",
     "vfonts": "^0.1.0",
-    "vue": "^3.2.16",
-    "vue-router": "^4.0.11",
-    "vue-types": "^4.1.0",
-    "vuedraggable": "^4.0.3"
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.12",
+    "vue-types": "^4.1.1",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@types/lodash": "^4.14.170",
-    "@types/node": "^15.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "@vitejs/plugin-vue": "^1.9.1",
-    "@vitejs/plugin-vue-jsx": "^1.1.8",
-    "@vue/compiler-sfc": "^3.2.16",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^15.14.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@vitejs/plugin-vue": "^1.10.2",
+    "@vitejs/plugin-vue-jsx": "^1.3.5",
+    "@vue/compiler-sfc": "^3.2.31",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.4.2",
     "commitizen": "^4.2.4",
-    "core-js": "^3.14.0",
+    "core-js": "^3.21.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-define-config": "1.1.2",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.18.0",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.20.0",
     "esno": "^0.7.3",
-    "gh-pages": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "husky": "^6.0.0",
-    "jest": "^27.0.6",
-    "less": "^4.1.1",
-    "less-loader": "^9.0.0",
-    "lint-staged": "^11.0.0",
-    "postcss": "^8.3.5",
-    "prettier": "^2.3.1",
-    "pretty-quick": "^3.1.0",
+    "jest": "^27.5.1",
+    "less": "^4.1.2",
+    "less-loader": "^9.1.0",
+    "lint-staged": "^11.2.6",
+    "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0",
-    "tailwindcss": "^2.2.7",
-    "typescript": "^4.4.3",
-    "unplugin-vue-components": "^0.17.2",
-    "vite": "^2.5.10",
-    "vite-plugin-compression": "^0.3.1",
-    "vite-plugin-html": "^2.0.7",
-    "vite-plugin-mock": "^2.9.3",
-    "vite-plugin-style-import": "^1.0.1",
+    "stylelint-scss": "^3.21.0",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.5.5",
+    "unplugin-vue-components": "^0.17.18",
+    "vite": "^2.8.1",
+    "vite-plugin-compression": "^0.3.6",
+    "vite-plugin-html": "^2.1.2",
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-style-import": "^1.4.1",
     "vue-eslint-parser": "^7.11.0"
   },
   "lint-staged": {
