--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build": "vite build && esno ./build/script/postBuild.ts",
     "build:no-cache": "yarn clean:cache && npm run build",
     "report": "cross-env REPORT=true npm run build",
-    "preview": "vite preview",
+    "preview": "npm run build && vite preview",
+    "preview:dist": "vite preview",
+    "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
+    "clean:lib": "rimraf node_modules",
     "build typecheck": "vuedx-typecheck . && vite build",
     "deploy": "gh-pages -d dist",
     "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
@@ -32,35 +35,35 @@
     "axios": "^0.21.4",
     "blueimp-md5": "^2.19.0",
     "date-fns": "^2.28.0",
-    "echarts": "^5.3.1",
+    "echarts": "^5.3.2",
     "element-resize-detector": "^1.2.4",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mitt": "^2.1.0",
     "mockjs": "^1.1.0",
-    "naive-ui": "^2.27.0",
-    "pinia": "^2.0.13",
+    "naive-ui": "^2.28.4",
+    "pinia": "^2.0.14",
     "qs": "^6.10.3",
     "vfonts": "^0.1.0",
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14",
+    "vue": "^3.2.33",
+    "vue-router": "^4.0.15",
     "vue-types": "^4.1.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@types/lodash": "^4.14.181",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^15.14.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-vue": "^1.10.2",
-    "@vitejs/plugin-vue-jsx": "^1.3.9",
-    "@vue/compiler-sfc": "^3.2.31",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vue/compiler-sfc": "^3.2.33",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.7",
     "commitizen": "^4.2.4",
-    "core-js": "^3.21.1",
+    "core-js": "^3.22.5",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
@@ -75,8 +78,8 @@
     "less": "^4.1.2",
     "less-loader": "^9.1.0",
     "lint-staged": "^11.2.6",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.1",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "stylelint": "^13.13.1",
@@ -85,9 +88,9 @@
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.21.0",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.4",
     "unplugin-vue-components": "^0.17.21",
-    "vite": "^2.9.1",
+    "vite": "^2.9.8",
     "vite-plugin-compression": "^0.3.6",
     "vite-plugin-html": "^2.1.2",
     "vite-plugin-mock": "^2.9.6",
