--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mockjs": "^1.1.0",
     "naive-ui": "^2.28.4",
     "pinia": "^2.0.14",
+    "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.10.3",
     "vfonts": "^0.1.0",
     "vue": "^3.2.33",
