--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.1.3",
     "blueimp-md5": "^2.19.0",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.8",
     "echarts": "^5.4.0",
     "element-resize-detector": "^1.2.4",
     "lodash": "^4.17.21",
