--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-ui-admin",
-  "version": "1.8.2",
+  "version": "1.9.0",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
@@ -8,11 +8,11 @@
   },
   "private": true,
   "scripts": {
-    "bootstrap": "yarn install",
-    "serve": "npm run dev",
+    "bootstrap": "pnpm install",
+    "serve": "pnpm run dev",
     "dev": "vite",
     "build": "vite build && esno ./build/script/postBuild.ts",
-    "build:no-cache": "yarn clean:cache && npm run build",
+    "build:no-cache": "pnpm clean:cache && npm run build",
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview",
     "preview:dist": "vite preview",
@@ -30,73 +30,73 @@
   "dependencies": {
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
-    "@vueup/vue-quill": "^1.0.0",
-    "@vueuse/core": "^9.5.0",
-    "axios": "^1.1.3",
+    "@vueup/vue-quill": "^1.2.0",
+    "@vueuse/core": "^9.13.0",
+    "axios": "^1.4.0",
     "blueimp-md5": "^2.19.0",
-    "date-fns": "^2.29.3",
-    "echarts": "^5.4.0",
+    "date-fns": "^2.30.0",
+    "echarts": "^5.4.3",
     "element-resize-detector": "^1.2.4",
-    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "mitt": "^3.0.0",
+    "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
-    "naive-ui": "^2.34.2",
-    "pinia": "^2.0.23",
-    "qs": "^6.11.0",
+    "naive-ui": "^2.34.4",
+    "pinia": "^2.1.6",
+    "qs": "^6.11.2",
     "vfonts": "^0.0.3",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
     "vue-types": "^4.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@types/lodash": "^4.14.188",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@commitlint/cli": "^17.7.0",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@types/lodash": "^4.14.197",
+    "@types/node": "^18.17.4",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
-    "@vue/compiler-sfc": "^3.2.45",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "autoprefixer": "^10.4.13",
-    "commitizen": "^4.2.5",
-    "core-js": "^3.26.0",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@vue/compiler-sfc": "^3.3.4",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.0",
+    "core-js": "^3.32.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-define-config": "1.12.0",
-    "eslint-plugin-jest": "^27.1.5",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.7.0",
+    "eslint-plugin-vue": "^9.17.0",
     "esno": "^0.16.3",
     "gh-pages": "^4.0.0",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
+    "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "lint-staged": "^13.2.3",
+    "postcss": "^8.4.27",
+    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
-    "stylelint": "^14.14.1",
-    "stylelint-config-prettier": "^9.0.4",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.3.0",
-    "tailwindcss": "^3.2.3",
-    "typescript": "^4.8.4",
-    "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.3",
+    "stylelint-scss": "^4.7.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^4.9.5",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^3.2.7",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-mock": "^2.9.8",
     "vite-plugin-style-import": "^2.0.0",
     "vue-demi": "^0.13.11",
-    "vue-draggable-next": "^2.1.1",
-    "vue-eslint-parser": "^9.1.0",
+    "vue-draggable-next": "^2.2.1",
+    "vue-eslint-parser": "^9.3.1",
     "vuedraggable": "^4.1.0"
   },
   "lint-staged": {
@@ -127,6 +127,6 @@
   },
   "homepage": "https://github.com/jekip/naive-ui-admin",
   "engines": {
-    "node": "^12 || >=14"
+    "node": ">=16"
   }
 }
