--- a/.env.development
+++ b/.env.development
@@ -4,11 +4,11 @@ VITE_PORT = 8001
 # 网站根目录
 VITE_PUBLIC_PATH = /
 
-# 是否开启mock
+# 是否开启 mock
 VITE_USE_MOCK = true
 
-# 网站前缀
-VITE_BASE_URL = /
+# 是否开启控制台打印 mock 请求信息
+VITE_LOGGER_MOCK = true
 
 # 是否删除console
 VITE_DROP_CONSOLE = true
@@ -20,11 +20,11 @@ VITE_DROP_CONSOLE = true
 # API 接口地址
 VITE_GLOB_API_URL =
 
-# 图片上传地址
-VITE_GLOB_UPLOAD_URL=
-
-# 图片前缀地址
-VITE_GLOB_IMG_URL=
-
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX = /api
+
+# 文件上传地址
+VITE_GLOB_UPLOAD_URL=
+
+# 文件前缀地址
+VITE_GLOB_FILE_URL=
