--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-ui-admin",
-  "version": "1.9.3",
+  "version": "2.0.0",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
@@ -22,44 +22,43 @@
     "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
     "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
     "lint:pretty": "pretty-quick --staged"
   },
   "dependencies": {
+    "@alova/mock": "^2.0.6",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^9.13.0",
-    "axios": "^1.7.2",
-    "blueimp-md5": "^2.19.0",
+    "alova": "^3.0.16",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "element-resize-detector": "^1.2.4",
     "lodash-es": "^4.17.21",
-    "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
-    "naive-ui": "^2.38.2",
-    "pinia": "^2.1.7",
-    "qs": "^6.12.1",
-    "vfonts": "^0.0.3",
-    "vue": "^3.4.31",
-    "vue-router": "^4.4.0",
+    "naive-ui": "^2.39.0",
+    "pinia": "^2.2.2",
+    "qs": "^6.13.0",
+    "vue": "^3.5.5",
+    "vue-router": "^4.4.5",
     "vue-types": "^4.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
-    "@types/lodash": "^4.17.6",
-    "@types/node": "^18.19.39",
+    "@faker-js/faker": "^9.0.0",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^18.19.50",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
-    "@vue/compiler-sfc": "^3.4.31",
+    "@vue/compiler-sfc": "^3.5.5",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
-    "core-js": "^3.37.1",
+    "core-js": "^3.38.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
@@ -67,7 +66,7 @@
     "eslint-define-config": "1.12.0",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-vue": "^9.28.0",
     "esno": "^0.16.3",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.3",
@@ -75,7 +74,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.4",
     "lint-staged": "^13.3.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.45",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.3.1",
     "rimraf": "^3.0.2",
@@ -84,13 +83,12 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.7.0",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.11",
     "typescript": "^4.9.5",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^5.3.2",
+    "vite": "^5.4.5",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.2",
-    "vite-plugin-mock": "^2.9.8",
     "vite-plugin-style-import": "^2.0.0",
     "vue-demi": "^0.13.11",
     "vue-draggable-next": "^2.2.1",
