--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "naive-ui-admin",
   "version": "2.0.0",
+  "type": "module",
   "author": {
     "name": "Ahjung",
     "email": "735878602@qq.com",
