--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@commitlint/config-conventional": "^17.8.1",
     "@faker-js/faker": "^9.9.0",
     "@types/lodash": "^4.17.20",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.19.122",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
